cmake_minimum_required(VERSION 3.9)
project(eecs560)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(Lab01)
add_subdirectory(Lab02)
add_subdirectory(Lab03)
add_subdirectory(Lab04)
add_subdirectory(Lab05)
add_subdirectory(Lab06)
add_subdirectory(Lab07)
add_subdirectory(Lab08)
add_subdirectory(Lab09)
add_subdirectory(Lab10)
